[project]
name = "rlhf-with-google-flan-t5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.0",
    "pandas==2.3.3",
    "datasets==2.17.0",
    "transformers==4.38.2",
    "evaluate==0.4.0",
    "peft==0.3.0",
    "trl==0.4.2"
]
